arc: bluetooth: Don't use nullptr with device name

Don't use nullptr with the device name in mojo types below
as they are not defined as nullable in mojom file.
- mojom::BluetoothProperty.bdname
- mojom::BluetoothAdvertisingData.local_name

This fixes Chrome crash in recent build because of the
Bluetooth API change in http://crrev.com/2440043002
that make the device name optional. Before that, GetName()
will returns MAC address when there is no device name.

BUG=663096
TEST=minnie won't crash when scan for new BT device.
     nRF connect app still has same behavior.

Review-Url: https://codereview.chromium.org/2482323002
Cr-Commit-Position: refs/heads/master@{#430789}

Former-commit-id: 68561070668c0f84a0cb2d3d9fc70129fb5ede1b